# BlogPy

./: db.sqlite3  pyproject.toml
blog_api/: admin.py  forms.py  models.py  urls.py  views.py
blog_api/migrations/: 0001_initial.py  0002_post.py
blog_api/templates/: start.html
media/user_1/: profile_image
settings/: settings.py  urls.py
static/css/: base.css  create.css  list_post.css
static/templates/: base.html
static/templates/form_templates/: form_create_post.html
static/templates/posts/: create.html  detail_post.html  main.html  view_on_tags.html
static/templates/profile/: profile_view.html
static/templates/registration/: logged_out.html  login.html  register.html
